新增存档、读档、重新开始功能，地图更新至第4层

--- a/magic_tower/index.html
+++ b/magic_tower/index.html
@@ -49,6 +49,12 @@
         <!--</div>-->
         <div id="keys" class="keys"></div>
     </div>
+
+    <!-- 默认隐藏的界面 -->
+    <div id="message" class="message"></div>
+    <div id="load" class="load"></div>
+
+    <div id="tips" class="tips">SPACE-帮助 Z-保存游戏 X-载入存档 C-重新开始</div>
 </div>
 
 <script type="text/javascript" src="js/map.js"></script>
@@ -59,6 +65,7 @@
 <script type="text/javascript" src="js/attack.js"></script>
 <script type="text/javascript" src="js/stair.js"></script>
 <script type="text/javascript" src="js/events.js"></script>
+<script type="text/javascript" src="js/save.js"></script>
 
 </body>
 </html>
